# FlightReservationSystem

./: CMakeLists.txt  README.md
docs/: design_documentation.md
include/: creators.h  data.h  interface.h  seats.h  sort.h
src/: creators.c  data.c  interface.c  main.c  seats.c  sort.c
